added some things
added market endpoint with and without amount
